--- a/index.html
+++ b/index.html
@@ -4,38 +4,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/libary/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <title>Spotify</title>
   </head>
   <body>
-    <div class="container-fluid" style="background-color: #000;">
+    <div class="container-fluid py-3 navegacao-superior"><!-- Navegação Superior-->
       <div class="container">
-        <div class="row" style="color: #fff">
-          <div class="col-7">
-            <img src="/imagens/spotify-logo-branca-white.png" alt="logo" style="width: 120px;">
+        <div class="row">
+          <div class="col-md-8">
+            <img src="/imagens/spotify-logo-branca-white.png" alt="logo" class="logo">
           </div>
-          <div class="col-5">
+          <div class="col-md-4">
             <nav class="navbar navbar-expand-lg">
               <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">Premium</a>
+                      <a class="nav-link" aria-current="page" href="#">
+                        <strong>Premium</strong>
+                      </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Suporte</a>
+                      <a class="nav-link" href="#">
+                        <strong>Suporte</strong>
+                      </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Baixar</a>
+                      <a class="nav-link" href="#">
+                        <strong>Baixar</strong>
+                      </a>
                     </li>
                     <span>|</span>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-                        <img src="/icones/account_circle-24px.svg" alt="Foto" style="background-color: white; border-radius: 50%;"> Perfil
+                        <img src="/icones/account_circle-24px.svg" alt="Foto" class="icone-usuario-pequeno">
+                        <strong>Perfil</strong>
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Conta</a></li>
-                        <li><a class="dropdown-item" href="#">Sair</a></li>
+                        <li>
+                          <a class="dropdown-item" href="#">
+                            <strong>Conta</strong>
+                          </a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item sair" href="#">
+                            <strong>Sair</strong>
+                          </a>
+                        </li>
                       </ul>
                     </li>
                   </ul>
@@ -46,92 +62,97 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid" style="background-color: #1f2a39;">
-      <div class="container" style="background-color: #ff4632;">
+    <div class="container-fluid fundo">
+      <div class="container py-5 cabecalho"> <!--Cabeçalho-->
         <div class="row">
-          <div class="col-8">
-            <h1>Curta 3 meses de Premium grátis</h1>
-            <h3>Curta músicas sem anúncios, no modo offline e muito mais. Cancele quando quiser.</h3>
+          <div class="col-md-8">
+            <h1><strong>Curta 3 meses de</br> Premium grátis</strong></h1>
+            <h3>Curta músicas sem anúncios, no modo</br> offline e muito mais. Cancele quando quiser.</h3>
             <a href="#" class="btn btn-primary">GANHE 3 MESES GRÁTIS</a>
-            <p>Somente para o plano Individual. Depois, apenas R$ 16,90/mês. Oferta indisponível para usuários que já experimentaram o Premium. <a href="#" alt="link">Sujeita a Termos e Condições</a>. A oferta termina em 31 de dez de 2020.</p>
+            <p>
+              Somente para o plano Individual. Depois, apenas R$ 16,90/mês. 
+              Oferta indisponível para usuários que já </br>experimentaram o Premium. 
+              <a href="#" alt="link">Sujeita a Termos e Condições</a>. 
+              A oferta termina em 31 de dez de 2020.
+            </p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <img src="/imagens/balão.png" alt="balão">
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-3" style="background-color: #1b1b1b; color: #fff;">
-            <img src="/icones/account_circle-24px.svg" alt="Foto" style="width: 100px;">
+          <div class="col-md-3 py-3 navegacao-lateral"> <!--Navegação Lateral-->
+            <img src="/icones/account_circle-24px.svg" alt="Foto" class="foto">
             <ul>
               <li>
+                <img src="/icones/house-24px.svg" alt="home"> 
                 <a href="#">
-                  <img src="/icones/house-24px.svg" alt="home"> 
-                  Visão geral da conta
+                  <strong>Visão geral da conta</strong>
                 </a>
               </li>
               <li>
+                <img src="/icones/create-24px.svg" alt="editar">
                 <a href="#">
-                  <img src="/icones/create-24px.svg" alt="editar">
                   Editar perfil
                 </a>
               </li>
               <li>
+                <img src="/icones/lock-24px.svg" alt="mudar senha">
                 <a href="#">
-                  <img src="/icones/lock-24px.svg" alt="mudar senha">
                   Mudar senha
                 </a>
               </li>
               <li>
+                <img src="/icones/notifications-24px.svg" alt="notificações">
                 <a href="#">
-                  <img src="/icones/notifications-24px.svg" alt="notificações">
                   Configurar notificações
                 </a>
               </li>
               <li>
+                <img src="/icones/lock-24px.svg" alt="privacidade">
                 <a href="#">
-                  <img src="/icones/lock-24px.svg" alt="privacidade">
                   Configurações de privacidade
                 </a>
               </li>
               <li>
+                <img src="/icones/refresh-24px.svg" alt="recuperar playlist">
                 <a href="#">
-                  <img src="/icones/refresh-24px.svg" alt="recuperar playlist">
                   Recuperar playlist
                 </a>
               </li>
               <li>
+                <img src="/icones/schedule-24px.svg" alt="recibos">
                 <a href="#">
-                  <img src="/icones/schedule-24px.svg" alt="recibos">
                   Recibos
                 </a>
               </li>
               <li>
+                <img src="/icones/extension-24px.svg" alt="aplicativos">
                 <a href="#">
-                  <img src="/icones/extension-24px.svg" alt="aplicativos">
                   Aplicativos
                 </a>
               </li>
               <li>
+                <img src="/icones/restore_from_trash-24px.svg" alt="resgatar">
                 <a href="#">
-                  <img src="/icones/restore_from_trash-24px.svg" alt="resgatar">
                   Resgatar
                 </a>
               </li>
             </ul>           
           </div>
-          <div class="col-9" style="background-color: #fff;">
+          <div class="col-md-9 visao-geral py-5 px-5"> <!--Visão Geral-->
             <h1>Visão geral da conta</h1>
             <h3>Perfil</h3>
-            <div class="row">
-              <div class="col-6">
+            <div class="row linha">
+              <div class="col-md-6 informacoes">
                 <p>Nome do usúario</p>
                 <p>E-mail</p>
                 <p>Data de nascimento</p>
                 <p>País ou região</p>
               </div>
-              <div class="col-6">
+              <div class="col-md-6">
                 <p>cristiancdias</p>
                 <p>cristiancdias@gmail.com</p>
                 <p>5 de janeiro de 1983</p>
@@ -139,17 +160,21 @@
               </div>
             </div>
             <a href="#" class="btn btn-primary">
-                EDITAR PERFIL
+                <strong>EDITAR PERFIL</strong>
             </a>
             <h3>Seu plano</h3>
-            <h1 style="background-color: #b52abd; color: #fff">
+            <h1 class="banner-roxo">
               <strong>Spotify Free</strong>
             </h1>
             
-            <p>Ouça música apenas em ordem aleatória e com anúncios.</p>
-            <h3>Free</h3>
+            <div class="bloco-free">
+              <p>Ouça música apenas em ordem aleatória e com anúncios.</p>
+              <h3>Free</h3>
+            </div>
 
-            <a href="#" class="btn btn-primary">SEJA PREMIUM</a>
+            <a href="#" class="btn btn-primary">
+              <strong>SEJA PREMIUM</strong>
+            </a>
 
             <h3>Saia em qualquer lugar</h3>
             <p>
@@ -157,26 +182,88 @@
               no celular, no desktop ou em qualquer outro dispositivo.
             </p>
 
-            <p style="border: 5px solid ##d9dadc; background-color: #f8f8f8;">
+            <p class="aviso">
               Aviso: não será feito logout de dispositivos parceiros, 
               como aparelhos da Sonos ou PlayStation. Para saber mais sobre 
               como sair do Spotify (ou desvinculá-lo) em um dispositivo p
               arceiro, confira o manual do fabricante do dispositivo.
             </p>
-            <a href="#" class="btn btn-primary">SAIA DE TODOS OS DISPOSITIVOS</a>
+            <a href="#" class="btn btn-primary grande">
+              <strong>SAIR DE TODOS OS DISPOSITIVOS</strong>
+            </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid" style="background-color: #000; color: #fff">
+    <div class="container-fluid rodape py-5"> <!--Rodapé-->
       <div class="container">
-        rodapé
+        <div class="row">
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-md-2">
+                <img src="/imagens/spotify-logo-branca-white.png" 
+                  alt="Spotify" class="logo" 
+                >
+              </div>
+              <div class="col-md-3">
+                <h6>EMPRESA</h6>
+                <ul>
+                  <li><a href="#">Sobre</a></li>
+                  <li><a href="#">Empregos</a></li>
+                  <li><a href="#">For the Record</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h6>COMUNIDADES</h6>
+                <ul>
+                  <li><a href="#">Para Artistas</a></li>
+                  <li><a href="#">Desenvolvedores</a></li>
+                  <li><a href="#">Publicidade</a></li>
+                  <li><a href="#">Investidores</a></li>
+                  <li><a href="#">Fornecedores</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <h6>LINKS ÚTEIS</h6>
+                <ul>
+                  <li><a href="#">Suporte</a></li>
+                  <li><a href="#">Player da Web</a></li>
+                  <li><a href="#">Aplicativo móvel grátis</a></li>
+                  <li><a href="#">Retrospectiva 2020</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-md-4">
+                <a href="#"><img src="/imagens/instagram.png" alt="Instagram"></a>
+              </div>
+              <div class="col-md-4">
+                <a href="#"><img src="/imagens/twitter.png" alt="Twitter"></a>
+              </div>
+              <div class="col-md-4">
+                <a href="#"><img src="/imagens/facebook.png" alt="Facebook"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-11"></div>
+          <div class="col-md-1 brasil">Brasil <img src="/imagens/Brasil.png" alt="Brasil"></div>
+        </div>
+        <div class="row footers">
+          <div class="col-md-10">
+          <a href="#">Legal</a>
+          <a href="#">Centro de Privacidade</a>
+          <a href="#">Politica de Privacidade</a>
+          <a href="#">Cookies</a>
+          <a href="#">Sobre anúncios</a></div>
+          <div class="col-md-2 copyright"> &copy 2020 Spotify AB</div>
+        </div>
       </div>
     </div>
 
-    
-
-
-    <script src="/libary/bootstrap/js/bootstrap.min.js"> </script>
+    <script src="/libary/bootstrap/js/bootstrap.bundle.min.js"> </script>
   </body>
 </html>
